--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -13,7 +13,7 @@ $(function(){
   <div class="top_top">
     <div class="inner">
       <div class="icon_index">
-        <div class="icon_about"><a id="jump" href="#bottom">&nbsp;RakuTabiについて</a></div>
+        <div class="icon_about"><a id="jump" href="#bottom"><i class="fa fa-plane fa-fw"></i>RakuTabiについて</a></div>
       </div>   
       
       <div class="logo"><%= image_tag('logo.png', :alt => 'RakuTabi') %></div>
@@ -30,9 +30,9 @@ $(function(){
     <div class="bottom_text">
       <p class="title">RakuTabiとは</p>
       <p class="text">
-        RakuTabiは、他のサービスとはちょっと違う、今までにない旅行ツアーレコメンドサービスです。<br />
+        RakuTabiは、他のサービスとはちょっと違う、今までにない旅行目的地レコメンドサービスです。<br />
         「休みがとれた。どこ行こう」<br />
-        行き先が決まっていない旅の検索に最適です。
+        行き先が決まっていない旅のアイデアを得るのに最適です。
       </p>
     </div>
     <div class="bottom_image">
@@ -45,9 +45,9 @@ $(function(){
       <p class="image"><%= image_tag("feature02.png") %></p>
     </div>
     <div class="bottom_text">
-      <p class="title">シンプルな検索</p>
+      <p class="title">シンプルな操作</p>
       <p class="text">
-        旅行ツアーをレコメンドしてもらうためにやらなきゃいけないことは、シンプルな質問に答えるだけ。<br />
+        目的地をレコメンドしてもらうためにやらなきゃいけないことは、シンプルな質問に答えるだけ。<br />
         細かいことを考えたり、たくさんの条件を入力する必要はありません。
       </p>
     </div>
@@ -57,7 +57,7 @@ $(function(){
     <div class="bottom_text">
       <p class="title">思いつかないような場所へ</p>
       <p class="text">
-        たったそれだけで、自分では思いつかないような旅行ツアーをレコメンドしてくれます。<br />
+        たったそれだけで、自分では思いつかないような目的地をレコメンドしてくれます。<br />
         世界はひろい。<br />
         RakuTabiで新しい発見をしてください。
       </p>
