Update miscellaneous stuff

--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -151,7 +151,7 @@ $(window).load(function() {
               <div class="title"><i class="fa fa-info-circle fa-fw"></i>今の天気</div>
               <div class="weather">晴れ / 24&#08451</div>
               <br />
-              <div class="title"><i class="fa fa-plane fa-fw"></i>ここに行けるツアー情報</div>
+              <div class="title"><i class="fa fa-suitcase fa-fw"></i>ここに行けるツアー情報</div>
               <div class="external_link"><a href="<%= @tour_url %>" target="_blank"><%= @title %></a></div>
               <br />
               <div class="internal_link"><a href="<%= "/detail?tourid=" + item['id'] %>" target="_blank"><i class="fa fa-mail-forward fa-fw"></i>詳細をみる</a></div>
