--- a/app/assets/stylesheets/tour.css.scss
+++ b/app/assets/stylesheets/tour.css.scss
@@ -19,7 +19,7 @@
 .icon_back { float: left; }
 .icon_back, .icon_refresh { display: inline-block; }
 .icon_back a, .icon_refresh a { width: auto; height: 16px; line-height: 16px; vertical-align: top; opacity: 0.8; z-index: 10; cursor: pointer; color: #333; text-decoration: none; }
-.icon_refresh a:hover  { opacity: 1; }
+.icon_back a:hover, .icon_refresh a:hover  { opacity: 1; }
 
 /* select */
 
@@ -134,27 +134,15 @@
 .tour .text .title {
   margin: 0 0 5px 0;
   padding: 0;
-  font-size: 12px;
   font-weight: normal;
-  color: #fff;
 }
-.tour .text .weather {
-  font-size: 12px;
-  color: #fff;
-}
-.tour .text .external_link a {
+.tour .text .external_link a, .tour .text .internal_link a {
   color: #fff;
   text-decoration: none;
-  font-size: 12px;
 }
 .tour .text .external_link a:hover {
   color: #fff;
   text-decoration: underline;
-}
-.tour .text .internal_link a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 12px;
 }
 .tour .text .internal_link a:hover {
   color: #fff;
