--- a/app/assets/stylesheets/tour.css.scss
+++ b/app/assets/stylesheets/tour.css.scss
@@ -134,9 +134,10 @@
 .tour .text .title {
   margin: 0 0 5px 0;
   padding: 0;
+  color: #aaa;
   font-weight: normal;
 }
-.tour .text .external_link a, .tour .text .internal_link a {
+.tour .text .external_link a{
   color: #fff;
   text-decoration: none;
 }
@@ -144,7 +145,23 @@
   color: #fff;
   text-decoration: underline;
 }
+.tour .text .internal_link {
+  margin: 30px 0 0 0;
+}
+.tour .text .internal_link a {
+  background: #fff;
+  border: 1px solid #fff;
+  border-radius: 20px;
+  -moz-border-radius: 20px;
+  -webkit-border-radius: 20px;
+  padding: 5px 20px;
+  color: #333;
+  text-decoration: none;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+}
 .tour .text .internal_link a:hover {
+  background: #333;
   color: #fff;
   text-decoration: none;
 }
