--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -148,13 +148,12 @@ $(window).load(function() {
             </div>
             <div class="text">
               <h2><%= @city %></h2>
-              <div class="title"><i class="fa fa-info-circle fa-fw"></i>今の天気</div>
-              <div class="weather">晴れ / 24&#08451</div>
+              <div class="title"><i class="fa fa-suitcase fa-fw"></i>今の天気</div>
+              <div class="weather">晴れ / 24&deg;C</div>
               <br />
               <div class="title"><i class="fa fa-suitcase fa-fw"></i>ここに行けるツアー情報</div>
               <div class="external_link"><a href="<%= @tour_url %>" target="_blank"><%= @title %></a></div>
-              <br />
-              <div class="internal_link"><a href="<%= "/detail?tourid=" + item['id'] %>" target="_blank"><i class="fa fa-mail-forward fa-fw"></i>詳細をみる</a></div>
+              <div class="internal_link"><a href="<%= "/detail?tourid=" + item['id'] %>" target="_blank">詳細をみる</a></div>
             </div>
           </div>
         </li>
