--- a/app/views/tour/detail.html.erb
+++ b/app/views/tour/detail.html.erb
@@ -1,7 +1,6 @@
 <div class="wrapper">
   <div class="photo">
   </div>
-
   <div class="tour">
     <% tour = @tourDetail %>
     <!-- HTMLで出力 -->
@@ -22,6 +21,6 @@
     <% end %>
   </div>
   <div class="weather">
-    <%= @temperature %>度
+    <%= @temperature %>度<br>
   </div>
 </div>
