--- a/app/views/tour/detail.html.erb
+++ b/app/views/tour/detail.html.erb
@@ -19,7 +19,12 @@
     <% end %>
   </div>
   <div class="weather">
-    <%= @temperature %>度<br>
+    <今日の天気><br>
+     <!-- <%= image_tag( 'http://openweathermap.org/img/w/@weather_icon.png') %><br>   →本当はこうしたいが、エラーになります。 -->
+    <%= image_tag( 'http://openweathermap.org/img/w/10d.png') %><br>
+    最高気温:<%= @temp_max %>度<br>
+    最低気温:<%= @temp_min %>度<br>
+
   </div>
   <div class="photo" style="margin-top: 30px;">
     <span>
