--- a/app/views/tour/detail.html.erb
+++ b/app/views/tour/detail.html.erb
@@ -20,8 +20,7 @@
   </div>
   <div class="weather">
     <今日の天気><br>
-     <!-- <%= image_tag( 'http://openweathermap.org/img/w/@weather_icon.png') %><br>   →本当はこうしたいが、エラーになります。 -->
-    <%= image_tag( 'http://openweathermap.org/img/w/10d.png') %><br>
+    <%= image_tag( 'http://openweathermap.org/img/w/' + @weather_icon + '.png') %><br>
     最高気温:<%= @temp_max %>度<br>
     最低気温:<%= @temp_min %>度<br>
 
