Reword at selection screen

--- a/app/assets/stylesheets/tour.css.scss
+++ b/app/assets/stylesheets/tour.css.scss
@@ -26,6 +26,10 @@
 .title {
   margin: 80px 0;
 }
+.title .question {
+  font-size: 32px;
+  letter-spacing: 0.2em;
+}
 
 .pic .circle {
   height: 352px;
