--- a/app/views/tour/select.html.erb
+++ b/app/views/tour/select.html.erb
@@ -18,10 +18,10 @@ function show() {
 
 <div class="wrapper">
   <div class="title">
-    <div><%= image_tag('title_select.png', :alt => '今の気分を選んでください。') %></div>
+    <div class="question">好きな画像を選んでください</div>
 
     <div class="icon_select">
-      <div class="icon_refresh"><a href="javascript:location.reload(true);"><i class="fa fa-refresh fa-fw"></i>別のイメージ画像を表示</a></div>
+      <div class="icon_refresh"><a href="javascript:location.reload(true);"><i class="fa fa-refresh fa-fw"></i>どちらも好きじゃない</a></div>
     </div>     
   </div>
   
