--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -1,9 +1,7 @@
 <script>
 $(window).load(function() {
   $('.flexslider').flexslider({
-    animation: "slide",
-    animationLoop: true,
-    controlNav: false,
+    slideshow: false,
     pausePlay: true,
     pauseText: "<i class=\"fa fa-pause fa-fw\"></i>スライドショーを停止",
     playText: "<i class=\"fa fa-play fa-fw\"></i>スライドショーを再生",
@@ -16,7 +14,7 @@ $(window).load(function() {
   });
   $('.flex-pause, .flex-prev, .flex-next').click(function () {
     map = markerActive.getMap();
-    map.setZoom(2);
+    map.setZoom(1);
   });
 });
 </script>
@@ -39,7 +37,7 @@ $(window).load(function() {
     var styles = [{"featureType":"landscape","stylers":[{"saturation":-100},{"lightness":65},{"visibility":"on"}]},{"featureType":"poi","stylers":[{"saturation":-100},{"lightness":51},{"visibility":"simplified"}]},{"featureType":"road.highway","stylers":[{"saturation":-100},{"visibility":"simplified"}]},{"featureType":"road.arterial","stylers":[{"saturation":-100},{"lightness":30},{"visibility":"on"}]},{"featureType":"road.local","stylers":[{"saturation":-100},{"lightness":40},{"visibility":"on"}]},{"featureType":"transit","stylers":[{"saturation":-100},{"visibility":"simplified"}]},{"featureType":"administrative.province","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"labels","stylers":[{"visibility":"on"},{"lightness":-25},{"saturation":-100}]},{"featureType":"water","elementType":"geometry","stylers":[{"hue":"#ffff00"},{"lightness":-25},{"saturation":-97}]}];
     var mapOptions = {
       center: new google.maps.LatLng(15.000, 155.000),
-      zoom: 2,
+      zoom: 1,
       disableDefaultUI: true,
       zoomControl: true,
       zoomControlOptions: {
@@ -86,7 +84,7 @@ $(window).load(function() {
         });
         marker.setIcon(iconActive);
         map.panTo(marker.getPosition());
-        map.setZoom(4);
+        //map.setZoom(4);
       });
     }, <%= @counter %> * 180);
       <% end %>
@@ -118,12 +116,7 @@ $(window).load(function() {
 <% end %>
 
 <% if ! @tours.nil? %>
-  <div class="wrapper">
-
-    <div class="icon_search">
-      <div class="icon_back"><a href="/selection"><i class="fa fa-mail-reply fa-fw"></i>イメージ選択画面に戻る</a></div>
-      <div class="icon_refresh"><a href="javascript:location.reload(true);"><i class="fa fa-refresh fa-fw"></i>別のレコメンドを表示</a></div>
-    </div>  
+  <div id="search">
 
     <div class="flexslider"><ul class="slides">
 
@@ -144,16 +137,42 @@ $(window).load(function() {
         <li>
           <div class="tour">
             <div class="pic">
-            <img src="<%= @img_url %>" alt="<%= @caption %>">
+              <img src="<%= @img_url %>" alt="<%= @caption %>">
             </div>
             <div class="text">
               <h2><%= @city %></h2>
-              <div class="title"><i class="fa fa-suitcase fa-fw"></i>今の天気</div>
+
+              <br /><br /><br />
+              
+              <div class="weather">2014.12.12 18:18 (日本との時差 -14)</div>
               <div class="weather">晴れ / 24&deg;C</div>
-              <br />
-              <div class="title"><i class="fa fa-suitcase fa-fw"></i>ここに行けるツアー情報</div>
-              <div class="external_link"><a href="<%= @tour_url %>" target="_blank"><%= @title %></a></div>
-              <div class="internal_link"><a href="<%= "/detail?tourid=" + item['id'] %>" target="_blank">詳細をみる</a></div>
+              
+              <br /><br /><br />
+              
+              <span class="fa-stack fa-lg">
+                <a href="<%= "/detail?tourid=" + item['id'] %>" target="_blank">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-camera fa-stack-1x" style="color: #333;"></i>
+                </a>
+              </span>
+              <span class="fa-stack fa-lg">
+                <a href="<%= @tour_url %>" target="_blank">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-suitcase fa-stack-1x" style="color: #333;"></i>
+                </a>
+              </span>
+              <span class="fa-stack fa-lg">
+                <a href="/selection">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-mail-reply fa-stack-1x" style="color: #333;"></i>
+                </a>
+              </span>
+
+              <br /><br /><br />
+
+              <div style="height: 200px; width: 300px;">
+                <div id="map_canvas" style="width: 100%; height: 100%"></div>
+              </div>
             </div>
           </div>
         </li>
@@ -165,7 +184,3 @@ $(window).load(function() {
 
   </div>
 <% end %>
-
-<div style="height: 300px; width: 966px; margin: 404px auto 35px auto;">
-  <div id="map_canvas" style="width:100%; height:100%"></div>
-</div>
