--- a/app/views/tour/select.html.erb
+++ b/app/views/tour/select.html.erb
@@ -16,11 +16,11 @@ function show() {
 }
 </script>
 
-<div class="wrapper">
+<div id="select">
   <div class="title">
     <div class="question">好きな画像を選んでください</div>
 
-    <div class="icon_select">
+    <div class="icon">
       <div class="icon_refresh"><a href="javascript:location.reload(true);"><i class="fa fa-refresh fa-fw"></i>どちらも好きじゃない</a></div>
     </div>     
   </div>
