--- a/app/views/tour/select.html.erb
+++ b/app/views/tour/select.html.erb
@@ -18,7 +18,7 @@ function show() {
 
 <div id="select">
   <div class="title">
-    <div class="question">好きな画像を選んでください</div>
+    <div class="question">好きな写真を選んでください</div>
 
     <div class="icon">
       <div class="icon_refresh"><a href="javascript:location.reload(true);"><i class="fa fa-refresh fa-fw"></i>どちらも好きじゃない</a></div>
