--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -109,6 +109,15 @@ $(window).load(function() {
   }
 
   google.maps.event.addDomListener(window, 'load', initialize);
+
+  $(document).ready( function(){
+    $('.tooltip').darkTooltip({
+        opacity: 1,
+        animation: 'fadeIn',
+        gravity: 'south',
+        theme:'light'
+    });
+  });
 </script>
 <% end %>
 
@@ -147,19 +156,19 @@ $(window).load(function() {
               
               <div class="icon">
                 <span class="fa-stack fa-lg">
-                  <a href="<%= "/detail?tourid=" + item['id'] %>" target="_blank">
+                  <a class="tooltip" data-tooltip="もっと写真をみる" href="<%= "/detail?tourid=" + item['id'] %>" target="_blank">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-camera fa-stack-1x" style="color: #333;"></i>
                   </a>
                 </span>
                 <span class="fa-stack fa-lg">
-                  <a href="<%= @tour_url %>" target="_blank">
+                  <a class="tooltip" data-tooltip="ここに行けるツアーをみる" hhref="<%= @tour_url %>" target="_blank">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-suitcase fa-stack-1x" style="color: #333;"></i>
                   </a>
                 </span>
                 <span class="fa-stack fa-lg">
-                  <a href="/selection">
+                  <a class="tooltip" data-tooltip="最初からやり直す" hhref="/selection">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-mail-reply fa-stack-1x" style="color: #333;"></i>
                   </a>
