--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -162,13 +162,13 @@ $(window).load(function() {
                   </a>
                 </span>
                 <span class="fa-stack fa-lg">
-                  <a class="tooltip" data-tooltip="ここに行けるツアーをみる" hhref="<%= @tour_url %>" target="_blank">
+                  <a class="tooltip" data-tooltip="ここに行けるツアーをみる" href="<%= @tour_url %>" target="_blank">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-suitcase fa-stack-1x" style="color: #333;"></i>
                   </a>
                 </span>
                 <span class="fa-stack fa-lg">
-                  <a class="tooltip" data-tooltip="最初からやり直す" hhref="/selection">
+                  <a class="tooltip" data-tooltip="最初からやり直す" href="/selection">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-mail-reply fa-stack-1x" style="color: #333;"></i>
                   </a>
