Changed the name of service

--- a/app/assets/stylesheets/top.css.scss
+++ b/app/assets/stylesheets/top.css.scss
@@ -21,7 +21,10 @@
   vertical-align: middle;
 }
 #index .logo {
-  margin-bottom: 130px;
+  margin-bottom: 160px;
+  font-size: 16px;
+  color: #fff;
+  letter-spacing: 0.2em;
 }
 
 #index .about {
