--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -15,10 +15,13 @@ $(function(){
     <div class="row">
       <div class="cell">
         <div class="icon">
-          <div class="icon_plane"><a id="jump" href="#about"><i class="fa fa-plane fa-fw"></i>RakuTabiについて</a></div>
+          <div class="icon_plane"><a id="jump" href="#about"><i class="fa fa-plane fa-fw"></i>タビノタネについて</a></div>
         </div>   
         
-        <div class="logo"><%= image_tag('logo.png', :alt => 'RakuTabi') %></div>
+        <div class="logo">
+          <%= image_tag('logo.png', :alt => 'RakuTabi') %><br />
+          思いつかないような場所へ行ける、旅行目的地レコメンドサービス
+        </div>
 
         <div class="button_top">
           <a href="/selection" alt="今すぐはじめる">今すぐはじめる</a>
@@ -30,9 +33,9 @@ $(function(){
   <div id="about" class="about">
     <div class="feature">
       <div class="bottom_text">
-        <p class="title">RakuTabiとは</p>
+        <p class="title">タビノタネとは</p>
         <p class="text">
-          RakuTabiは、他のサービスとはちょっと違う、今までにない旅行目的地レコメンドサービスです。<br />
+          タビノタネは、他のサービスとはちょっと違う、今までにない旅行目的地レコメンドサービスです。<br />
           「休みがとれた。どこ行こう」<br />
           行き先が決まっていない旅のアイデアを得るのに最適です。
         </p>
@@ -61,7 +64,7 @@ $(function(){
         <p class="text">
           たったそれだけで、自分では思いつかないような目的地をレコメンドしてくれます。<br />
           世界はひろい。<br />
-          RakuTabiで新しい発見をしてください。
+          タビノタネで新しい発見をしてください。
         </p>
       </div>
       <div class="bottom_image">
@@ -75,7 +78,7 @@ $(function(){
   </div>
 
   <div class="footer">
-    Copyright 2014 &copy; RakuTabi. All rights reserved.
+    Copyright 2014 &copy; Tabinotane. All rights reserved.
   </div>
 
   <div id="totop" class="totop"><a href="#"><img src="/assets/totop.png"></a></div>
