--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -19,7 +19,7 @@ $(function(){
         </div>   
         
         <div class="logo">
-          <%= image_tag('logo.png', :alt => 'RakuTabi') %><br />
+          <%= image_tag('logo_l.png', :alt => 'タビノタネ') %><br />
           思いつかないような場所へ行ける、旅行目的地レコメンドサービス
         </div>
 
