--- a/app/views/tour/select.html.erb
+++ b/app/views/tour/select.html.erb
@@ -17,6 +17,39 @@ function show() {
 </script>
 
 <div id="select">
+  <div class="nav">
+    <div class="row">
+      <div class="logo">
+        <a href="/" alt="Home">
+          <%= image_tag('logo_s.png', :alt => 'タビノタネ') %>
+        </a>
+      </div>
+        
+      <div class="breadcrumb">
+        <span class="fa-stack fa-lg">
+          <i class="fa fa-circle fa-stack-2x" style="color: #fff;"></i>
+          <i class="fa fa-question fa-stack-1x" style="color: #333;"></i>
+        </span>
+
+        <i class="fa fa-chevron-right fa-fw" style="color: #fff;"></i>
+
+        <span class="fa-stack fa-lg" style="color: #fff;">
+          <i class="fa fa-circle fa-stack-2x" style="color: #f1634f;"></i>
+          <i class="fa fa-question fa-stack-1x" style="color: #fff;"></i>
+        </span>
+
+        <i class="fa fa-chevron-right fa-fw" style="color: #fff;"></i>
+
+        <span class="fa-stack fa-lg" style="color: #fff;">
+          <i class="fa fa-circle fa-stack-2x" style="color: #fff;"></i>
+          <i class="fa fa-plane fa-stack-1x" style="color: #333;"></i>
+        </span>
+      </div>
+
+      <div style="clear: both;"></div>
+    </div>
+  </div>
+
   <div class="title">
     <div class="question">好きな写真を選んでください</div>
 
