--- a/app/views/tour/select.html.erb
+++ b/app/views/tour/select.html.erb
@@ -31,14 +31,14 @@ function show() {
           <i class="fa fa-question fa-stack-1x" style="color: #333;"></i>
         </span>
 
-        <i class="fa fa-chevron-right fa-fw" style="color: #fff;"></i>
+        <span style="color: #fff; padding: 0 10px;">></span>
 
         <span class="fa-stack fa-lg" style="color: #fff;">
           <i class="fa fa-circle fa-stack-2x" style="color: #f1634f;"></i>
           <i class="fa fa-question fa-stack-1x" style="color: #fff;"></i>
         </span>
 
-        <i class="fa fa-chevron-right fa-fw" style="color: #fff;"></i>
+        <span style="color: #fff; padding: 0 10px;">></span>
 
         <span class="fa-stack fa-lg" style="color: #fff;">
           <i class="fa fa-circle fa-stack-2x" style="color: #fff;"></i>
