--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -78,7 +78,7 @@ $(function(){
   </div>
 
   <div class="footer">
-    Copyright 2014 &copy; Tabinotane. All rights reserved.
+    Copyright &copy; Tabinotane. All rights reserved.
   </div>
 
   <div id="totop" class="totop"><a href="#"><img src="/assets/totop.png"></a></div>
