Modify links etc #91

--- a/app/views/tour/question07.html.erb
+++ b/app/views/tour/question07.html.erb
@@ -27,22 +27,22 @@ function show() {
 
       <div class="breadcrumb">
         <span class="fa-stack fa-lg">
-          <i class="fa fa-circle fa-stack-2x" style="color: #fff;"></i>
+          <i class="fa fa-circle-thin fa-stack-2x" style="color: #333;"></i>
           <i class="fa fa-question fa-stack-1x" style="color: #333;"></i>
         </span>
 
-        <span style="color: #fff; padding: 0 10px;">></span>
+        <i class="fa fa-caret-right" style="color: #ddd; padding: 0 10px;"></i>
 
         <span class="fa-stack fa-lg" style="color: #fff;">
-          <i class="fa fa-circle fa-stack-2x" style="color: #f1634f;"></i>
-          <i class="fa fa-question fa-stack-1x" style="color: #fff;"></i>
+          <i class="fa fa-circle-thin fa-stack-2x" style="color: #ddd;"></i>
+          <i class="fa fa-question fa-stack-1x" style="color: #ddd;"></i>
         </span>
 
-        <span style="color: #fff; padding: 0 10px;">></span>
+        <i class="fa fa-caret-right" style="color: #ddd; padding: 0 10px;"></i>
 
         <span class="fa-stack fa-lg" style="color: #fff;">
-          <i class="fa fa-circle fa-stack-2x" style="color: #fff;"></i>
-          <i class="fa fa-plane fa-stack-1x" style="color: #333;"></i>
+          <i class="fa fa-circle-thin fa-stack-2x" style="color: #ddd;"></i>
+          <i class="fa fa-plane fa-stack-1x" style="color: #ddd;"></i>
         </span>
       </div>
 
@@ -51,7 +51,7 @@ function show() {
   </div>
 
   <div class="title">
-    <div class="question">動物に生まれ変わるとしたら、どっちがいい？</div>
+    <div class="question">動物に生まれ変わるとしたらどっち？</div>
 
     <div class="icon">
       <div class="icon_refresh"><a href="/question11"><i class="fa fa-refresh fa-fw"></i>他の質問を選ぶ</a></div>
