--- a/app/assets/stylesheets/tour.css.scss
+++ b/app/assets/stylesheets/tour.css.scss
@@ -19,7 +19,7 @@
   position: absolute;
   top: 0;
   width: 100%;
-  background-color: #333;
+  border-bottom: 1px solid #efefef;
 }
 #select .nav .row {
   margin: 10px auto 3px auto;
@@ -151,6 +151,7 @@
 }
 #search .tour .info {
   margin: 50px 30px 0 30px;
+  line-height: 200%;
 }
 #search .tour .icon {
   margin: 50px 30px 0 30px;
