--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -74,7 +74,7 @@ $(function(){
   </div>
 
   <div class="button_bottom">
-    <a href="/selection" alt="今すぐはじめる">今すぐはじめる</a>
+    <a href="/question07" alt="今すぐはじめる">今すぐはじめる</a>
   </div>
 
   <div class="footer">
