--- a/app/views/tour/question11.html.erb
+++ b/app/views/tour/question11.html.erb
@@ -27,22 +27,22 @@ function show() {
 
       <div class="breadcrumb">
         <span class="fa-stack fa-lg">
-          <i class="fa fa-circle fa-stack-2x" style="color: #fff;"></i>
+          <i class="fa fa-circle-thin fa-stack-2x" style="color: #333;"></i>
           <i class="fa fa-question fa-stack-1x" style="color: #333;"></i>
         </span>
 
-        <span style="color: #fff; padding: 0 10px;">></span>
+        <i class="fa fa-caret-right" style="color: #ddd; padding: 0 10px;"></i>
 
         <span class="fa-stack fa-lg" style="color: #fff;">
-          <i class="fa fa-circle fa-stack-2x" style="color: #f1634f;"></i>
-          <i class="fa fa-question fa-stack-1x" style="color: #fff;"></i>
+          <i class="fa fa-circle-thin fa-stack-2x" style="color: #ddd;"></i>
+          <i class="fa fa-question fa-stack-1x" style="color: #ddd;"></i>
         </span>
 
-        <span style="color: #fff; padding: 0 10px;">></span>
+        <i class="fa fa-caret-right" style="color: #ddd; padding: 0 10px;"></i>
 
         <span class="fa-stack fa-lg" style="color: #fff;">
-          <i class="fa fa-circle fa-stack-2x" style="color: #fff;"></i>
-          <i class="fa fa-plane fa-stack-1x" style="color: #333;"></i>
+          <i class="fa fa-circle-thin fa-stack-2x" style="color: #ddd;"></i>
+          <i class="fa fa-plane fa-stack-1x" style="color: #ddd;"></i>
         </span>
       </div>
 
