--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -150,8 +150,9 @@ $(window).load(function() {
               <h2><%= @city %></h2>
               
               <div class="info">
-                2014.12.12 18:18 (日本との時差 -14)<br />
-                晴れ / 24&deg;C
+                今の時間<br />
+                今日の天気<br />
+                観光スポット
               </div>
               
               <div class="icon">
@@ -168,7 +169,7 @@ $(window).load(function() {
                   </a>
                 </span>
                 <span class="fa-stack fa-lg">
-                  <a class="tooltip" data-tooltip="最初からやり直す" href="/selection">
+                  <a class="tooltip" data-tooltip="最初からやり直す" href="/question11">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-mail-reply fa-stack-1x" style="color: #333;"></i>
                   </a>
