--- a/app/views/tour/select.html.erb
+++ b/app/views/tour/select.html.erb
@@ -27,22 +27,22 @@ function show() {
         
       <div class="breadcrumb">
         <span class="fa-stack fa-lg">
-          <i class="fa fa-circle fa-stack-2x" style="color: #fff;"></i>
+          <i class="fa fa-circle-thin fa-stack-2x" style="color: #ddd;"></i>
+          <i class="fa fa-question fa-stack-1x" style="color: #ddd;"></i>
+        </span>
+
+        <i class="fa fa-caret-right" style="color: #ddd; padding: 0 10px;"></i>
+
+        <span class="fa-stack fa-lg" style="color: #fff;">
+          <i class="fa fa-circle-thin fa-stack-2x" style="color: #333;"></i>
           <i class="fa fa-question fa-stack-1x" style="color: #333;"></i>
         </span>
 
-        <span style="color: #fff; padding: 0 10px;">></span>
+        <i class="fa fa-caret-right" style="color: #ddd; padding: 0 10px;"></i>
 
         <span class="fa-stack fa-lg" style="color: #fff;">
-          <i class="fa fa-circle fa-stack-2x" style="color: #f1634f;"></i>
-          <i class="fa fa-question fa-stack-1x" style="color: #fff;"></i>
-        </span>
-
-        <span style="color: #fff; padding: 0 10px;">></span>
-
-        <span class="fa-stack fa-lg" style="color: #fff;">
-          <i class="fa fa-circle fa-stack-2x" style="color: #fff;"></i>
-          <i class="fa fa-plane fa-stack-1x" style="color: #333;"></i>
+          <i class="fa fa-circle-thin fa-stack-2x" style="color: #ddd;"></i>
+          <i class="fa fa-plane fa-stack-1x" style="color: #ddd;"></i>
         </span>
       </div>
 
@@ -51,10 +51,10 @@ function show() {
   </div>
 
   <div class="title">
-    <div class="question">好きな写真を選んでください</div>
+    <div class="question">好きな写真はどっち？</div>
 
     <div class="icon">
-      <div class="icon_refresh"><a href="javascript:location.reload(true);"><i class="fa fa-refresh fa-fw"></i>どちらも好きじゃない</a></div>
+      <div class="icon_refresh"><a href="javascript:location.reload(true);"><i class="fa fa-refresh fa-fw"></i>どっちも好きじゃない</a></div>
     </div>     
   </div>
   
