Move pics to the center #16

--- a/app/views/tour/detail.html.erb
+++ b/app/views/tour/detail.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div id="detail">
   <div class="instagram food"></div>
   <div class="instagram view"></div>
   <div class="instagram sight"></div>
