--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -50,9 +50,9 @@ $(function(){
         <p class="image"><%= image_tag("feature02.png") %></p>
       </div>
       <div class="bottom_text">
-        <p class="title">シンプルな操作</p>
+        <p class="title">たった3回の質問で</p>
         <p class="text">
-          目的地をレコメンドしてもらうためにやらなきゃいけないことは、シンプルな質問に答えるだけ。<br />
+          目的地をレコメンドしてもらうためにやらなきゃいけないことは、シンプルな質問に3回答えるだけ。<br />
           細かいことを考えたり、たくさんの条件を入力する必要はありません。
         </p>
       </div>
